--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "ci": "npm install",
+    "start":"node ./src/index.js",
     "test": "jest __test__"
   },
   "author": "",
